--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "pg": "^8.11.3",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "google-auth-library": "^9.4.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
